* improve card modal styling * card text in parentheses now muted and italic * card flavor text now muted and aligned to bottom * card images fix height to 600px

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,3 +17,8 @@ html, body, body > .page, .off-canvas-wrap { height:100%; }
 .inner-wrap { min-height: 100%; }
 
 .off-canvas-wrap aside li.active{ background-color: rgba(0, 0, 0, 0.35); }
+
+.valign-bottom {
+  position: absolute;
+  bottom: 0;
+}
